--- a/package.json
+++ b/package.json
@@ -1,6 +1,20 @@
 {
+  "name": "athena",
+  "module": "src/index.js",
+  "type": "module",
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.3"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2",
+    "path": "^0.12.7",
+    "uuid": "^9.0.1"
   }
 }
