--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 PORT=3551
 BOT_TOKEN=MTI3Nzc4NzcyMTkwOTE0MTU2Nw.GcScmY.Dh_dORata2ZkHPiDsgS43Dv4GAAMcqBhECC-ZU
 DB=mongodb://127.0.0.1:27017/BackendS12
+VERBOSE_LOGGING=true
